--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,18 +1,10 @@
-name: Docker Image CI
+name: Display hostname
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: push
 
 jobs:
-
-  build:
-
+  display-hostname:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      - name: Run hostname command
+        run: hostname
