--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,7 +41,7 @@ jobs:
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_DEPLOY_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments). Is automatically present as a secret. Not to be added by the user.
+          repo_token: ${{ secrets.GITHUB_TOKEN }} 
           action: "upload"
-          app_location: /frontend # App source code path
+          app_location: /frontend 
           skip_app_build: true
